--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@vercel/analytics": "^1.6.1",
+    "@vercel/kv": "^3.0.0",
     "@vercel/speed-insights": "^1.3.1",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
